# ewoc_dataship

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  README.md  mypy.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-cd.yml  docker.yml  push.yml  tags.yml
dataship/classes/: s1_prd_id.py
dataship/dag/: main.py  pid_to_ard.py  s1_dag.py  s1_prd_id.py  s2_dag.py  s3man.py  ship.py  srtm_dag.py  utils.py
dataship/eo_prd_id/: s2_prd_id.py
dataship/remote/: landsat_cloud_mask.py  sentinel_cloud_mask.py
docs/: conf.py  index.rst
src/ewoc_dag/: __init__.py  cli_dem.py  cli_eo.py  cli_ewoc_blocks.py  cli_ewoc_prd.py  copdem.py  copdem_dag.py  eodag_utils.py  ewoc_dag.py  l8c2l2_dag.py  landsat8.py  main.py  s1_dag.py  s2_dag.py  s3man.py  safe_format.py  ship.py  srtm_dag.py  utils.py
src/ewoc_dag/bucket/: aws.py  creodias.py  eobucket.py  ewoc.py
src/ewoc_dag/dag/: main.py  pid_to_ard.py  s1_dag.py  s3man.py  ship.py  srtm_dag.py  utils.py
src/ewoc_dag/eo_prd_id/: ewoc_prd_id.py  l8_prd_id.py  s1_prd_id.py  s2_prd_id.py
src/ewoc_dag/legacy/: pid_to_ard.py  s3man.py  utils.py
src/ewoc_dag/legacy/remote/: landsat_cloud_mask.py  sentinel_cloud_mask.py
src/ewoc_dag/provider/: aws.py  creodias.py  eodata.py  ewoc.py
tests/: test_bucket_ewoc.py  test_copdem_dag.py  test_l8c2l2_dag.py  test_srtm_dag.py  test_utils.py
